issue 1132 - Apply focus styles only for keyboard focus. Update mock themes where updating the border width on focus causes the screen to jump.

--- a/packages/terra-button-group/src/ButtonGroupButton.scss
+++ b/packages/terra-button-group/src/ButtonGroupButton.scss
@@ -16,11 +16,9 @@
       opacity: var(--terra-button-group-button-disabled-opacity, 0.3);
     }
 
-    &.is-focused,
-    &:focus {
+    &.is-focused {
       background-color: var(--terra-button-group-button-focus-background-color, #fff);
       border-color: var(--terra-button-group-button-focus-border-color, #c8cacb);
-      border-width: var(--terra-button-group-button-focus-border-width, 1px);
       box-shadow: var(--terra-button-group-button-focus-box-shadow, 0 0 7px 4px rgba(76, 178, 233, 0.35), 0 0 1px 3px rgba(76, 178, 233, 0.5), 0 0 1px 0 #fff);
       // A z-index needs to be added on focus so that the focus ring does not get hidden behind adjacent buttons
       z-index: 1000; 
