--- a/packages/terra-site/src/cerner-mock-theme.scss
+++ b/packages/terra-site/src/cerner-mock-theme.scss
@@ -131,16 +131,15 @@
   --terra-button-group-button-disabled-opacity: 0.5;
   --terra-button-group-button-focus-background-color: rgba(0, 0, 0, 0.0);
   --terra-button-group-button-focus-border-color: #396ee5;
-  --terra-button-group-button-focus-border-width: 2px;
-  --terra-button-group-button-focus-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
+  --terra-button-group-button-focus-box-shadow: inset 0 0 0px 2px #396ee5;
   --terra-button-group-button-hover-background-color: rgba(57, 110, 229, 0.2);
   --terra-button-group-button-hover-color: #396ee5;
   --terra-button-group-button-active-and-hover-background-color: #2c58c7;
   --terra-button-group-button-active-and-hover-border-color: #2c58c7;
   --terra-button-group-button-active-and-hover-color: #fff;
   --terra-button-group-button-active-and-focus-background-color: #396ee5;
-  --terra-button-group-button-active-and-focus-border-color: #fff;
-  --terra-button-group-button-active-and-focus-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.3), 0 0 0 1px #4a90e2;
+  --terra-button-group-button-active-and-focus-border-color: #396ee5;
+  --terra-button-group-button-active-and-focus-box-shadow: inset 0 0 0px 1px #fff;
   --terra-button-group-button-active-and-focus-color: #fff;
   --terra-button-group-button-active-background-color: #396ee5;
   --terra-button-group-button-active-border-color: #396ee5;
